--- a/app/src/main/res/layout/atadj.xml
+++ b/app/src/main/res/layout/atadj.xml
@@ -115,7 +115,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text=""/>
 
         <View
             android:layout_width="match_parent"
@@ -143,7 +143,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text=""/>
 
         <View
             android:layout_width="match_parent"
@@ -171,7 +171,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text=""/>
 
         <View
             android:layout_width="fill_parent"
