--- a/app/src/main/res/layout/splashlayout.xml
+++ b/app/src/main/res/layout/splashlayout.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport = "true">
+    android:fillViewport = "true"
+    android:id="@+id/scrollView">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,13 +15,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:maxWidth="300dp"
-            android:maxHeight="300dp"
+            android:maxWidth="200dp"
+            android:maxHeight="200dp"
             android:scaleType="fitCenter"
             android:src="@drawable/glassbyte"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="123dp" />
+            android:layout_marginTop="160dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,6 +35,7 @@
             android:textColor="@color/black"
             android:layout_below="@+id/image_view"
             android:layout_centerHorizontal="true" />
+
 
     </RelativeLayout>
 </ScrollView>
